WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273606
[WebGPU] GPUBuffer should not destroy the underlying buffer from its destructor
https://bugs.webkit.org/show_bug.cgi?id=273606
Summary
[WebGPU] GPUBuffer should not destroy the underlying buffer from its destructor
Mike Wyrzykowski
Reported
2024-05-01 22:21:45 PDT
[WebGPU] RenderPipeline does not retain the buffers it uses, leading to the possibility of the buffer being destroyed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-05-01 22:22:03 PDT
<
rdar://problem/127408015
>
Mike Wyrzykowski
Comment 2
2024-05-01 22:28:04 PDT
This is actually in the encoders, updating title. It leads to the possibility of the buffer being destroyed before the command buffer is submitted
Mike Wyrzykowski
Comment 3
2024-05-02 11:32:09 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28051
EWS
Comment 4
2024-05-06 10:48:40 PDT
Committed
278412@main
(0a9423a613b0): <
https://commits.webkit.org/278412@main
> Reviewed commits have been landed. Closing PR #28051 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug