[WebGPU] GPUBuffer should not destroy the underlying buffer from its destructor https://bugs.webkit.org/show_bug.cgi?id=273606 <radar://127408015>

Reviewed by Dan Glastonbury.

The first and last line of the dtor were useless but the destroy
call should have not existed, since the buffer may still be used in the GPU
process after it is GC'ed from the JS layer.

Observed in a flaky fashion from https://webgpu.github.io/webgpu-samples/?sample=deferredRendering
where some command buffers were failing, occassionally.

* Source/WebCore/Modules/WebGPU/GPUBuffer.cpp:
(WebCore::GPUBuffer::~GPUBuffer): Deleted.

Canonical link: https://commits.webkit.org/278412@main